@@ -1,3 +1,6 @@
+2017-12-18
+Updating! Refine qtotal (R funtion: qtotalNormalized)
+
 2017-07-18
 Updating! Adapt aFold model for complex design with linear model (R funtion: ABSSeqlm)
 
